<resources>
    <string name="app_name">Jaby</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="splash_txt">Stay close to your baby anytime, anywhere.\nJaby turns your smartphone into a real-time baby monitor with live video and audio feed, ensuring you peace of mind.</string>
    <string name="header2">Let\'s make things happen!</string>
    <string name="header1">Say hello to Jaby!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="existing_account">"Already have an account? "</string>
    <string name="create_an_account">Create an account</string>
    <string name="continue_btn">Continue</string>
    <string name="app_logo">jaby_app_logo</string>
    <string name="resend">Resend</string>
    <string name="verification_msg">Now let\'s verify your account, we\'ve sent you a verification E-mail\nPlease check your E-mail and verify</string>
    <string name="app_icon_desc">jaby</string>
    <string name="no_monitor_text">You currently don\'t have any monitor device online.\nYou can make this device a monitor\nby clicking this button</string>
</resources>